Use JAVA 21